<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">REST Client for Android</string>
    <string name="app_name_1">REST Client</string>
    <string name="app_name_2">for Android</string>
    <string name="app_icon_note">App icon courtesy of Frenzic System Icon Pack by Louie Mantia</string>
    <string name="author">By Dustin R. Callaway</string>
    <string name="email">drcallaway@gmail.com</string>
    <string name="web">http://www.sourcestream.com</string>
    <string name="copyright">Copyright \u00A9 2012 Dustin R. Callaway</string>
    <string name="request_tab">Request</string>
    <string name="response_tab">Response</string>
	<string name="http_method">HTTP Method: </string>
	<string name="url">URL:</string>
	<string name="http_headers">HTTP Headers:</string>
    <string name="header_type">Header Type:</string>
    <string name="header_name">Header Name:</string>
    <string name="header_value">Header Value:</string>
    <string name="auth_username">Username:</string>
    <string name="auth_password">Password:</string>
    <string name="header_add_title">Add Header</string>
    <string name="body">Body:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="request_progress">Sending request...</string>
    <string name="response_headers">Header</string>
    <string name="response_body">Body</string>
    <string name="save_request">Save Request</string>
    <string name="save_replace_request">Save or Update Request</string>
    <string name="update_request">Choose Request to Update</string>
    <string name="save_request_hint">Enter New Request Name</string>
    <string name="or">or</string>
    <string name="load_request">Load Request</string>
    <string name="delete_request">Delete Request</string>
    <string name="delete_header">Delete Header</string>
    <string name="no_requests">No saved requests found</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_request">Delete request \"%s\"?</string>
    <string name="confirm_delete_header">Delete header \"%s\"?</string>
    <string name="request_error_title">Connection Error</string>
    <string name="request_error_body">Unable to connect to the given URL.</string>
    <string name="request_error_timeout_body">No response before connection timed out.</string>
    <string name="request_error_no_host_body">Host not found.</string>
    <string name="request_error_no_response_body">No response from host or server is using an untrusted certificate.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="rate_app_title">Rate This App</string>
    <string name="rate_app_body">If you like this app, would you consider rating it in the Google Play Store?</string>
    <string name="rate_app_rate_button">Sure, I\'ll Rate It</string>
    <string name="rate_app_later_button">Remind Me Later</string>
    <string name="rate_app_no_button">No Thanks</string>

    <string name="pref_trust_certs_title">Trust All Certificates</string>
    <string name="pref_trust_certs_desc">Accept self-signed server certificates for HTTPS connections</string>
    <string name="pref_default_to_https_title">Default to HTTPS</string>
    <string name="pref_default_to_https_desc">Pre-fill URL text field with https://</string>
    <string name="pref_delete_headers_title">Delete Headers on Clear</string>
    <string name="pref_delete_headers_desc">Delete headers when Clear button is pressed</string>
    <string name="pref_set_timeout_title">Timeout Connection</string>
    <string name="pref_set_timeout_desc">After %s seconds</string>

    <string-array name="http_methods_array">
        <item>GET</item>
        <item>POST</item>
        <item>PUT</item>
        <item>DELETE</item>
        <item>HEAD</item>
        <item>OPTIONS</item>
        <item>TRACE</item>
    </string-array>

    <string-array name="header_types">
        <item>Custom</item>
        <item>Accept</item>
        <item>Authorization</item>
        <item>Authorization (Basic)</item>
        <item>Content-Type</item>
        <item>Cookie</item>
        <item>User-Agent</item>
        <item>User-Agent (Android)</item>
        <item>User-Agent (iPhone)</item>
        <item>User-Agent (iPad)</item>
    </string-array>
</resources>
