<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView style="@style/FillFill">
        <LinearLayout style="@style/FillFill" android:orientation="vertical">
            <ImageView style="@style/WrapFill" android:gravity="center_horizontal" android:src="@drawable/http_128"
                android:paddingTop="50dp"/>
            <TextView style="@style/WrapFill" android:gravity="center_horizontal" android:text="@string/app_name_1"
                android:paddingTop="20dp" android:textSize="30sp" android:textStyle="bold"/>
            <TextView style="@style/WrapFill" android:gravity="center_horizontal" android:text="@string/app_name_2"
                android:paddingTop="0dp" android:textSize="25sp" android:textStyle="bold"/>
            <TextView style="@style/WrapFill" android:gravity="center_horizontal" android:text="@string/author"
                android:paddingTop="40dp" android:textSize="15sp"/>
            <TextView style="@style/WrapFill" android:gravity="center_horizontal" android:text="@string/email"
                android:paddingTop="0dp" android:textSize="15sp" android:autoLink="email"/>
            <TextView style="@style/WrapFill" android:gravity="center_horizontal" android:text="@string/web"
                android:paddingTop="0dp" android:textSize="15sp" android:autoLink="web"/>
            <TextView style="@style/WrapFill" android:gravity="center_horizontal" android:text="@string/app_icon_note"
                android:paddingTop="30dp" android:textSize="12sp" android:paddingLeft="10dp" android:paddingRight="10dp"/>
            <TextView style="@style/WrapFill" android:gravity="center_horizontal" android:text="@string/copyright"
                android:paddingTop="10dp" android:textSize="12sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>