<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="#ffffff"
    android:padding="5dp" android:layout_height="wrap_content" android:layout_width="300dp">
    <LinearLayout android:orientation="vertical" style="@style/WrapFill" android:background="#000000" android:padding="20dp">
        <TextView android:text="@string/rate_app_title" style="@style/WrapFill"
            android:gravity="center_horizontal" android:textSize="20sp" android:textStyle="bold"
            android:layout_marginBottom="10dp" android:textColor="#ffffff"/>
        <ImageView android:src="@drawable/http_128" style="@style/WrapFill" android:layout_marginBottom="10dp"/>
        <TextView android:text="@string/rate_app_body" style="@style/WrapFill"
            android:gravity="center_horizontal" android:textSize="16sp" android:layout_marginBottom="30dp"
            android:textColor="#ffffff"/>
        <Button android:id="@+id/rateAppButton" android:text="@string/rate_app_rate_button"
            style="@style/WrapFill" android:paddingLeft="20dp" android:paddingRight="20dp"
            android:layout_gravity="center_horizontal" android:textSize="16sp"
            android:layout_marginBottom="10dp" android:onClick="onClick"/>
        <Button android:id="@+id/rateLaterButton" android:text="@string/rate_app_later_button"
            style="@style/WrapFill" android:paddingLeft="20dp" android:paddingRight="20dp"
            android:layout_gravity="center_horizontal" android:textSize="16sp"
            android:layout_marginBottom="10dp" android:onClick="onClick"/>
        <Button android:id="@+id/rateNoButton" android:text="@string/rate_app_no_button"
            style="@style/WrapFill" android:paddingLeft="20dp" android:paddingRight="20dp"
            android:layout_gravity="center_horizontal" android:textSize="16sp"
            android:layout_marginBottom="10dp" android:onClick="onClick"/>
    </LinearLayout>
</ScrollView>